# quantum

./: .gitignore  Cargo.toml  README.md
docs/: index.html
docs/assets/: blochupdate.js  sphere.js  style.css  three.min.js
docs/wasm/: editor.js  editor.js.br  editor_bg.wasm  editor_bg.wasm.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
editor/: Cargo.toml  Dioxus.toml
editor/assets/: blochupdate.js  sphere.js  style.css
editor/src/: circuit.rs  info.rs  main.rs
quantum/: Cargo.toml
quantum/src/: complex.rs  lib.rs  matrix.rs  prelude.rs  qubit.rs
src/: complex.rs  main.rs  matrix.rs  prelude.rs  qubit.rs
