[workspace]
members = ["editor", "quantum"]
resolver = "2"

[workspace.dependencies]
quantum = { path = "./quantum" }
dioxus = { version = "0.6", features = ["desktop", "html", "hooks", "web"] }
serde = "1.0"
anyhow = "1.0.79"
fern = "0.7"
log = "0.4.22"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
